--- a/Tetris/pom.xml
+++ b/Tetris/pom.xml
@@ -42,6 +42,16 @@
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
                 <version>0.30</version>
+                <configuration>
+                    <targetClasses>
+                        <param>palikkapeli.objektit.*</param>
+                        <param>palikkapeli.pelilogiikka.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>palikkapeli.objektit.*</param>
+                        <param>palikkapeli.pelilogiikka.*</param>
+                    </targetTests>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
